assemblyline_standalone/templates/apm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apm
  labels:
    app: assemblyline
    section: core
    component: apm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: assemblyline
      section: core
      component: apm
  template:
    metadata:
      labels:
        app: assemblyline
        section: core
        component: apm
    spec:
      priorityClassName: al-core-priority
      containers:
        - name: apm
          image: docker.elastic.co/apm/apm-server:7.6.0
#          command: ["/bin/bash", "-c", "/usr/local/bin/docker-entrypoint -e -E output.elasticsearch.password=$$ELASTICSEARCH_PASSWORD"]
          ports:
          - containerPort: 8200
          volumeMounts:
          - name: config
            mountPath: /usr/share/apm-server/apm-server.yml
            readOnly: true
            subPath: apm.yml
      volumes:
      - name: config
        configMap:
          defaultMode: 0644
          name: apm-config
